--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,4 +15,4 @@ spring:
     properties:
       hibernate.format_sql: true
 google:
-  api_key: AIzaSyB3goBXF4AVFqunFnMZ5i6UVO9RPlyR4is
+  api_key: YOUR_API_KEY
