--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.5.6</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.ericsson</groupId>
+	<groupId>com.meteergin</groupId>
 	<artifactId>map-backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>map-backend</name>
